LPS-168143 buildLang for error messages

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Aneu al fragment pare per editar.
 go-to-paypal-and-set-up-ipn-to-post-to-x=Aneu a PayPal i establiu l'IPN per a enviar a {0}.
 go-to-profile-pages=Ves a les pàgines de perfil
 go-to-remote-live=Ves als apartats actius remots
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Anar a l'staging
 go-to-submission-page=Ves a la pàgina d'enviaments
 go-to-test-details=Ves als detalls de la prova
@@ -14043,6 +14044,7 @@ see-thumbnail=Visualitza la miniatura
 see-x-for-more-information=Visualitza {0} per a més informació.
 segment=Segment
 segment-name-is-required=Es requereix el nom del segment.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0}
 segmentation-enabled-description=Desactiveu aquesta opció per evitar la segmentació d'usuaris a cada sol·licitud.
 segmentation-enabled-name=S'ha habilitat la segmentació
@@ -16236,6 +16238,7 @@ the-country-could-not-be-found=No s'ha trobat el país.
 the-coupon-could-not-be-found=No s'ha trobat el cupó.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=La creació de la instància pot tardar una estona. Tancar la finestra no cancel·larà el procés.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=La creació del lloc web pot tardar una estona. Tancar la finestra no cancel·larà el procés.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=El nombre actual d'elements d'aquesta col·lecció és {0}.
 the-current-theme-does-not-support-editing-style-book-values=El tema actual no admet l'edició dels valors del llibre d'estils. Per utilitzar aquesta característica, heu de canviar el tema seleccionat.
 the-custom-field-could-not-be-found=No s'ha trobat el camp personalitzat.
