--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Gå til PayPal og konfigurer IPN-endepunkt til forsendelse af {0}.
 go-to-profile-pages=Gå til private websider
 go-to-remote-live=Gå til Remote Live (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Gå til midlertidig (Automatic Translation)
 go-to-submission-page=Gå til afsendelsesside (Automatic Translation)
 go-to-test-details=Gå til Oplysninger om A/B-test (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Vis miniature
 see-x-for-more-information=Åbn {0} for mere information.
 segment=afsnit (Automatic Translation)
 segment-name-is-required=Målgruppenavn er påkrævet. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Deaktiver denne indstilling for at forhindre brugersegmentering på alle anmodninger. Hvis den er deaktiveret, vil personlige samlinger og oplevelser ikke være tilgængelige. (Automatic Translation)
 segmentation-enabled-name=Aktiver segmentering (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=The webindhold could not be found.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=The webindhold could not be found.
