--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Gehen Sie zum übergeordneten Fragment, um es zu b
 go-to-paypal-and-set-up-ipn-to-post-to-x=Die IPN-Konfiguration Ihres PayPal-Kontos sollte auf {0} zeigen.
 go-to-profile-pages=Zu Profilseiten wechseln
 go-to-remote-live=Zum Remote-Livesystem wechseln
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Zum Stagingsystem wechseln
 go-to-submission-page=Zur Anmeldeseite wechseln
 go-to-test-details=Zu den Testdetails
@@ -14043,6 +14044,7 @@ see-thumbnail=Zeige Miniaturansicht
 see-x-for-more-information=Siehe {0} für weitere Informationen.
 segment=Segment
 segment-name-is-required=Der Segment-Name ist erforderlich.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0}
 segmentation-enabled-description=Deaktivieren Sie diese Option, um eine Benutzersegmentierung bei jeder Anfrage zu verhindern. Ist diese Option deaktiviert, ist die Personalisierung von Sammlungen und Erfahrungen nicht verfügbar.
 segmentation-enabled-name=Segmentierung aktivieren
@@ -16236,6 +16238,7 @@ the-country-could-not-be-found=Das Land konnte nicht gefunden werden.
 the-coupon-could-not-be-found=Der Gutschein konnte nicht gefunden werden.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=Die Erstellung der Instanz kann einige Zeit dauern. Wenn Sie das Fenster schließen, wird der Prozess nicht abgebrochen.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=Die Erstellung der Site kann einige Zeit dauern. Wenn Sie das Fenster schließen, wird der Prozess nicht abgebrochen.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=Die aktuelle Anzahl von Elementen in dieser Sammlung beträgt {0}.
 the-current-theme-does-not-support-editing-style-book-values=Das aktuelle Theme unterstützt die Bearbeitung von Style Book-Werten nicht. Um diese Funktion zu nutzen, müssen Sie das ausgewählte Theme ändern.
 the-custom-field-could-not-be-found=Das benutzerdefinierte Feld konnte nicht gefunden werden.
