--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Accédez au fragment parent pour le modifier.
 go-to-paypal-and-set-up-ipn-to-post-to-x=Allez sur PayPal et configurez un IPN pour l'envoyer à {0}.
 go-to-profile-pages=Aller aux pages de profile
 go-to-remote-live=Aller directement au serveur de production
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Aller à Staging
 go-to-submission-page=Aller à la page d'envoi
 go-to-test-details=Aller aux détails du test A/B
@@ -14043,6 +14044,7 @@ see-thumbnail=Voir la miniature
 see-x-for-more-information=Voir {0} pour de plus amples informations.
 segment=Segment
 segment-name-is-required=Le nom du segment est obligatoire.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0}
 segmentation-enabled-description=Désactivez cette option pour empêcher la segmentation des utilisateurs à chaque demande. Si elle est désactivée, la personnalisation des collections et des expériences ne sera pas disponible.
 segmentation-enabled-name=Activer la segmentation
@@ -16236,6 +16238,7 @@ the-country-could-not-be-found=Le pays est introuvable.
 the-coupon-could-not-be-found=Le bon n'a pas pu être trouvé.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=La création de l'instance peut prendre un certain temps. La fermeture de la fenêtre n'annulera pas le processus.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=La création du site peut prendre un certain temps. La fermeture de la fenêtre n'annulera pas le processus.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=Le nombre actuel d'éléments dans cette collection est {0}.
 the-current-theme-does-not-support-editing-style-book-values=Le thème actuel ne prend pas en charge la modification des valeurs du livre de style. Pour utiliser cette fonctionnalité, vous devez modifier le thème sélectionné.
 the-custom-field-could-not-be-found=Le champ fait sur commande n'a pas pu être trouvé.
