--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=A szerkesztéshez ugorjon a fölérendelt töredé
 go-to-paypal-and-set-up-ipn-to-post-to-x=Menj a PayPalre és állítsd be az IPN-t erre: {0}.
 go-to-profile-pages=Menj a Profil oldalakra
 go-to-remote-live=Ugrás a távoli éles szerverre
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Stagingre menni
 go-to-submission-page=Ugrás a Beküldés oldalra
 go-to-test-details=Ugrás a teszt részleteire
@@ -14044,6 +14045,7 @@ see-thumbnail=Előnézet
 see-x-for-more-information=A {0} tartalmaz további információt.
 segment=Szegmens
 segment-name-is-required=A szegmensnév kötelező.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Szegmens: {0}
 segmentation-enabled-description=Kapcsolja ki a lehetőséget, hogy megelőzze a felhasználó szegmentálását minden kérelemnél. Ha ki van kapcsolva, a gyűjtemények és élmények testreszabása nem lesz lehetséges.
 segmentation-enabled-name=Szegmentálás engedélyezése
@@ -16237,6 +16239,7 @@ the-country-could-not-be-found=Az ország nem található.
 the-coupon-could-not-be-found=A kupon nem található.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=A példány létrehozása igénybe vehet némi időt. Az ablak bezárása nem állítja le az eljárást.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=A webhely létrehozása igénybe vehet némi időt. Az ablak bezárása nem állítja le az eljárást.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=Az elemek aktuális száma ebben a gyűjteményben {0}.
 the-current-theme-does-not-support-editing-style-book-values=Az aktuális téma nem támogatja a stíluskönyv értékeinek a szerkesztését. A funkció használatához meg kell változtatnia a kiválasztott témát.
 the-custom-field-could-not-be-found=Az egyedi mező nem található.
