--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Pergi ke PayPal dan mendirikan IPN untuk Posting {0}.
 go-to-profile-pages=Pergi ke Halaman Pribadi
 go-to-remote-live=Pergi ke Hidup Terpencil
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Pergi ke Pementasan (Automatic Translation)
 go-to-submission-page=Buka Halaman Kiriman (Automatic Translation)
 go-to-test-details=Buka Detail Uji A/B (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Lihat Thumbnail
 see-x-for-more-information=Lihat {0} untuk informasi lebih lanjut.
 segment=Segmen (Automatic Translation)
 segment-name-is-required=Nama segmen diperlukan. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Nonaktifkan opsi ini untuk mencegah segmentasi pengguna pada setiap permintaan. Jika dinonaktifkan, personalisasi koleksi dan pengalaman tidak akan tersedia. (Automatic Translation)
 segmentation-enabled-name=Fungsikan Segmentasi (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=kupon tidak dapat ditemukan.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Field kustom tidak dapat ditemukan.
