--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -7239,6 +7239,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Vai su PayPal e imposta l'IPN per scrivere a {0}.
 go-to-profile-pages=Vai alle Pagine del Profilo
 go-to-remote-live=Vai al Live Remoto
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Vai a Staging
 go-to-submission-page=Vai alla pagina di invio (Automatic Translation)
 go-to-test-details=Vai ai dettagli del test A/B (Automatic Translation)
@@ -14042,6 +14043,7 @@ see-thumbnail=Vedi Thumbnail
 see-x-for-more-information=Vedi {0} per maggiori informazioni.
 segment=segmento (Automatic Translation)
 segment-name-is-required=Il nome del segmento è obbligatorio. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Disabilita questa opzione per impedire la segmentazione degli utenti ad ogni richiesta. Se disabilitato, la personalizzazione di raccolte ed esperienze non sarà disponibile.
 segmentation-enabled-name=Abilita segmentazione (Automatic Translation)
@@ -16235,6 +16237,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Il buono non è stato trovato.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Il campo personalizzato non è stato trovato.
