--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Gå til PayPal og stille inn IPN for å sende til {0}.
 go-to-profile-pages=Gå til private sider
 go-to-remote-live=Gå til produksjonsmiljø på fjerntjener
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Gå til Staging (Automatic Translation)
 go-to-submission-page=Gå til innsendingssiden (Automatic Translation)
 go-to-test-details=Gå til A/B testdetaljer
@@ -14041,6 +14042,7 @@ see-thumbnail=Se miniatyrbilde
 see-x-for-more-information=Se {0} for mer informasjon.
 segment=innslag (Automatic Translation)
 segment-name-is-required=Segmentnavn kreves. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Deaktiver dette alternativet for å forhindre brukersegmentering på alle forespørsler. Hvis deaktivert, vil ikke samlinger og opplevelsestilpasning være tilgjengelige. (Automatic Translation)
 segmentation-enabled-name=Aktiver segmentering (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupongen ble ikke funnet.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Det egendefinerte feltet ble ikke funnet.
