--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Ga naar het bovenliggende fragment om te bewerken.
 go-to-paypal-and-set-up-ipn-to-post-to-x=Naar PayPal gaan en IPN in {0} instellen.
 go-to-profile-pages=Naar profielpagina's
 go-to-remote-live=Naar externe productiefase
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Ga naar ontwikkelomgeving
 go-to-submission-page=Ga naar de pagina 'Inzenden'
 go-to-test-details=Ga naar de testgegevens
@@ -14044,6 +14045,7 @@ see-thumbnail=Miniatuurafbeelding zien
 see-x-for-more-information={0} zien voor meer informatie.
 segment=Segment
 segment-name-is-required=De segmentnaam is verplicht.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0}
 segmentation-enabled-description=Schakel deze optie uit om gebruikerssegmentatie bij elk verzoek te voorkomen. Als deze optie is uitgeschakeld, is geen personalisatie van collecties en ervaringen beschikbaar.
 segmentation-enabled-name=Segmentatie inschakelen
@@ -16237,6 +16239,7 @@ the-country-could-not-be-found=Het land werd niet gevonden.
 the-coupon-could-not-be-found=De kortingsbon werd niet gevonden.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=Het kan even duren om de instantie te maken. Het proces wordt niet geannuleerd door dit venster te sluiten.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=Het aanmaken van de site kan even duren. Het proces wordt niet geannuleerd door dit venster te sluiten.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=Het huidige aantal items in deze collectie is {0}.
 the-current-theme-does-not-support-editing-style-book-values=Het huidige thema ondersteunt het bewerken van stijlboekwaarden niet. Om deze functie te gebruiken, moet u het geselecteerde thema wijzigen.
 the-custom-field-could-not-be-found=Het extra veld werd niet gevonden.
