--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Acesse o fragmento pai para editar.
 go-to-paypal-and-set-up-ipn-to-post-to-x=Visite o PayPal e configure o IPN para postar para {0}.
 go-to-profile-pages=Ir para Páginas do Perfil
 go-to-remote-live=Ir para o Live Remoto
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Ir para o Staging
 go-to-submission-page=Vá para a página de envio
 go-to-test-details=Vá para os Detalhes de Teste
@@ -14041,6 +14042,7 @@ see-thumbnail=Ver miniatura
 see-x-for-more-information=Ver {0} para mais informação.
 segment=Segmento
 segment-name-is-required=O nome do segmento é necessário.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segmento: {0}
 segmentation-enabled-description=Remover a seleção desta opção para evitar a segmentação de usuário a cada solicitação. Se não selecionada, a personalização de coleções e experiências não estará disponível.
 segmentation-enabled-name=Habilitar segmentação
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=O país não pôde ser encontrado.
 the-coupon-could-not-be-found=O cupom não pode ser encontrado.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=A criação da instância pode levar algum tempo. O fechamento da janela não cancelará o processo.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=A criação do site pode levar algum tempo. O fechamento da janela não cancelará o processo.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=O número atual de itens nesta coleção é {0}.
 the-current-theme-does-not-support-editing-style-book-values=O tema atual não dá suporte a alteração dos valores do livro de estilos. Para usar este recurso, você deve modificar o tema selecionado.
 the-custom-field-could-not-be-found=O campo personalizado não pode ser encontrado.
