--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Pojdi na PayPal in nastavi IPN za pošiljanje na {0}.
 go-to-profile-pages=Uredi zasebne strani
 go-to-remote-live=Pojdi na oddaljeno življenje (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Pojdi na Staging (Automatic Translation)
 go-to-submission-page=Pojdi na stran za predložitev (Automatic Translation)
 go-to-test-details=Pojdi na A/B podrobnosti preskusa (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Poglej thumbnail
 see-x-for-more-information=Poglej {0} za več informacij.
 segment=Segment (Automatic Translation)
 segment-name-is-required=Zahtevano je ime segmenta. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Onemogočite to možnost, da preprečite segmentacijo uporabnikov na vsako zahtevo. Če je onemogoceno, prilagajanje zbirk in izkušenj ne bo na voljo. (Automatic Translation)
 segmentation-enabled-name=Omogoči segmentiranje (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupona ni moč najti.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Stripa ni moč najti.
