--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Gå till överordnat fragment för att redigera.
 go-to-paypal-and-set-up-ipn-to-post-to-x=Gå till PayPal och ställ in IPN för att skicka till {0}.
 go-to-profile-pages=Gå till privata sidorna
 go-to-remote-live=Gå till fjärr-live
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Gå till mellanlagring
 go-to-submission-page=Gå till inlämningssida
 go-to-test-details=Gå till testinformation
@@ -14041,6 +14042,7 @@ see-thumbnail=Se miniatyrbild
 see-x-for-more-information=Se {0} för mer information.
 segment=Segment
 segment-name-is-required=Segmentnamn krävs.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0}
 segmentation-enabled-description=Inaktivera det här alternativet för att hindra användarsegmentering för varje begäran. Om det är inaktiverat är inte anpassning av samlingar eller upplevelser tillgängligt.
 segmentation-enabled-name=Aktivera segmentering
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=Det gick inte att hitta landet.
 the-coupon-could-not-be-found=Kupongen kunde inte hittas.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=Det kan ta en stund att skapa instansen. Om du stänger fönstret avslutas inte skapandet.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=Det kan ta en stund att skapa webbplatsen. Om du stänger fönstret avslutas inte skapandet.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=Nuvarande antal föremål i den här samlingen är {0}.
 the-current-theme-does-not-support-editing-style-book-values=Det nuvarande temat stöder inte värden för att redigera stilbok. Du måste ändra det valda temat för att använda den här funktionen.
 the-custom-field-could-not-be-found=Det egna fältet kunde inte hittas.
