--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=ไปยัง parent fragment เพื่อแ
 go-to-paypal-and-set-up-ipn-to-post-to-x=ไปยัง PayPal และตั้งค่า IPN เพื่อโพสต์ที่ {0}
 go-to-profile-pages=ไปที่หน้าโปรไฟล์
 go-to-remote-live=ไปยังรีโมทไลฟ์
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=ไปยังสเตจจิ้ง
 go-to-submission-page=ไปยังหน้าการส่งข้อมูล
 go-to-test-details=ไปที่รายละเอียดการทดสอบ A/B
@@ -14041,6 +14042,7 @@ see-thumbnail=ดูภาพตัวอย่าง
 see-x-for-more-information=ดู {0} สำหรับข้อมูลเพิ่มเติม
 segment=Segment
 segment-name-is-required=ต้องระบุชื่อกลุ่ม
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0}
 segmentation-enabled-description=ปิดใช้งานตัวเลือกนี้เพื่อป้องกันการแบ่งกลุ่มผู้ใช้ในทุกคำขอ หากปิดใช้งาน คอลเลกชั่นและประสบการณ์ส่วนบุคคลจะไม่สามารถใช้ได้
 segmentation-enabled-name=เปิดใช้งานการแบ่งกลุ่ม
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=ไม่พบคูปอง
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=การสร้างไซต์อาจใช้เวลาสักครู่ การปิดหน้าต่างจะไม่ยกเลิกกระบวนการ
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=จำนวนรายการในปัจจุบันในคอลเล็กชันนี้คือ {0}
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=ไม่พบฟิลด์ที่กำหนดเอง
