--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=PayPal'a gidin ve {0}'a gönderilmesi için IPN alın.
 go-to-profile-pages=Özel Sayfa Düzenle
 go-to-remote-live=Uzaktan Canlı'ya gitme (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Evreleme'ye git (Automatic Translation)
 go-to-submission-page=Gönderim Sayfasına Git (Automatic Translation)
 go-to-test-details=A/B Test Ayrıntılarına Git (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Örnek Resimcik Gör
 see-x-for-more-information=Daha fazla bilgi için: {0} .
 segment=parça (Automatic Translation)
 segment-name-is-required=Segment adı gereklidir. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Her istekte kullanıcı segmentasyonunu önlemek için bu seçeneği devre dışı bırakın. Devre dışı bırakılırsa, koleksiyonlar ve deneyimler kişiselleştirme kullanılamaz. (Automatic Translation)
 segmentation-enabled-name=Segmentasyonu Etkinleştir (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupon bulunamadı.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Karikatür/Komik/Mizah(Comic) bulunamadı.
