--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Сходіть на PayPal та налаштуйте IPN для того, щоби написати в {0}.
 go-to-profile-pages=Змінити приватну сторінку
 go-to-remote-live=Перейти до віддаленого режиму реального життя (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Перейти до постановки (Automatic Translation)
 go-to-submission-page=Перейти до сторінки надсилання (Automatic Translation)
 go-to-test-details=Перейти до A / B Подробиці тесту (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Подивитися на мале зображення
 see-x-for-more-information=Дивіться {0} для того, щоби отримати детальну інформацію.
 segment=Сегмент (Automatic Translation)
 segment-name-is-required=Потрібно вдатися ім'я сегмента. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Вимкніть цей параметр, щоб запобігти сегментації користувача за кожним запитом. Якщо цей елемент не буде вимкнено, колекції та персоналізація досвіду будуть недоступні. (Automatic Translation)
 segmentation-enabled-name=Увімкнути сегментацію (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Купон не знайдено.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Не знайдено комік.
