--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Tới PayPal và cài đặt IPN tới {0}.
 go-to-profile-pages=Đi tới trang Hồ sơ cá nhân
 go-to-remote-live=Đi tới trực tuyến (Live)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Đi tới Dàn dựng (Automatic Translation)
 go-to-submission-page=Đi tới Trang gửi (Automatic Translation)
 go-to-test-details=Đi tới Chi tiết kiểm tra A / B (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Xem hình thu nhỏ
 see-x-for-more-information=Xem {0} để có thêm thông tin
 segment=Phân đoạn (Automatic Translation)
 segment-name-is-required=Tên phân đoạn là bắt buộc. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Tắt tùy chọn này để ngăn phân đoạn người dùng trên mọi yêu cầu. Nếu bị vô hiệu hóa, bộ sưu tập và trải nghiệm cá nhân hóa sẽ không khả dụng. (Automatic Translation)
 segmentation-enabled-name=Bật Phân đoạn (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Phiếu giảm giá không tìm thấy.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Trường thuộc tính tùy biến không được tìm thấy.
