--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=到PayPal並設定IPN以貼到 {0}。
 go-to-profile-pages=到私密頁面
 go-to-remote-live=到遠端Live
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=轉到 Staging
 go-to-submission-page=轉到提交頁面
 go-to-test-details=轉到 A/B Test 細節
@@ -14042,6 +14043,7 @@ see-thumbnail=看縮圖
 see-x-for-more-information=更多資訊請看 {0}。
 segment=分眾
 segment-name-is-required=分眾名稱為必填。
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=停用此選項可防止對每個請求進行使用者分眾。 如果停用，則無法使用收藏和體驗個人化。
 segmentation-enabled-name=啟用分眾
@@ -16235,6 +16237,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=找不到優惠券。
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=找不到客製欄位。
