--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=ذهاب إلى الجزء الأصل لتحرير
 go-to-paypal-and-set-up-ipn-to-post-to-x=إذهب إلى PayPal و أنشئ IPN لإرسال إلى {0}.
 go-to-profile-pages=الذهاب إلى الصفحات الخاصة
 go-to-remote-live=الذهاب إلى البيئة الفعلية عن بعد
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=الانتقال إلى التجهيز
 go-to-submission-page=ذهاب إلى صفحة الإرسال
 go-to-test-details=ذهاب إلى تفاصيل الاختبار
@@ -14041,6 +14042,7 @@ see-thumbnail=عرض الصورة المصغرة
 see-x-for-more-information=للمزيد من المعلومات، راجع {0}.
 segment=جزء
 segment-name-is-required=اسم المقطع مطلوب.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=المقطع: {0}
 segmentation-enabled-description=عطّل هذا الخيار لمنع تجزئة المستخدم في كل طلب.
 segmentation-enabled-name=المقاطع ممكّنة
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=لم يتم العثور على الدولة.
 the-coupon-could-not-be-found=لم يتم العثور على الكوبون.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=قد يستغرق إنشاء المثيل بعض الوقت. وإغلاق النافذة لن يلغي عملية الإنشاء.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=قد يستغرق إنشاء الموقع بعض الوقت. وإغلاق النافذة لن يلغي عملية الإنشاء.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=العدد الحالي للعناصر في هذا التحصيل هو {0}.
 the-current-theme-does-not-support-editing-style-book-values=الملمح الحالي لا يدعم تحرير قيم سجل الأنماط. لاستخدام هذه الميزة، يجب تغيير الملمح المحدد.
 the-custom-field-could-not-be-found=لم يتم العثور على الكاريكاتير.
