--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Отидете в PayPal и настройте IPN, за да пратите на {0}.
 go-to-profile-pages=Редактиране на частна страница
 go-to-remote-live=Към отдалечено живо (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Отидете на "Постановка" (Automatic Translation)
 go-to-submission-page=Към страницата за подаване (Automatic Translation)
 go-to-test-details=Отидете на A / B Тест подробности (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Вижте картинка
 see-x-for-more-information=Вижте {0} за повече информация.
 segment=Сегмент (Automatic Translation)
 segment-name-is-required=Името на сегмента е задължително. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Деактивирайте тази опция, за да предотвратите сегментирането на потребителите при всяка заявка. Ако е забранено, няма да има налични колекции и персонализация на изживявания. (Automatic Translation)
 segmentation-enabled-name=Разрешаване на сегментиране (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Купонът не може да бъде намерен.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Комиксът не може да бъде намерен.
