--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Běžte do PayPal a nastavte vaše IPN na odeslání do {0}.
 go-to-profile-pages=Přejít na privátní stránky
 go-to-remote-live=Přejít na vzdálené produkční prostředí
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Go to Staging (Automatic Copy)
 go-to-submission-page=Go to Submission Page (Automatic Copy)
 go-to-test-details=Go to A/B Test Details (Automatic Copy)
@@ -14041,6 +14042,7 @@ see-thumbnail=Zobrazit náhled
 see-x-for-more-information=Pro více informací se podívejte na {0}.
 segment=Segment (Automatic Copy)
 segment-name-is-required=Segment name is required. (Automatic Copy)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Zakažte tuto volbu pro zamezení segmentace uživatelů při každém požadavku. Pokud je zakázáno, personalizace kolekcí a zážitků není dostupná.
 segmentation-enabled-name=Povolit Segmentaci
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupón nenalezen.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Uživatelské pole nebylo nalezeno.
