--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Μετάβαση στο PayPal και ορισμός IPN για αποστολή στο {0}.
 go-to-profile-pages=Μετάβαση στις Ιδιωτικές Σελίδες
 go-to-remote-live=Μετάβαση στο απομακρυσμένο παραγωγικό site
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Μετάβαση στη στάση (Automatic Translation)
 go-to-submission-page=Μεταβείτε στη Σελίδα υποβολής (Automatic Translation)
 go-to-test-details=Μεταβείτε στις λεπτομέρειες δοκιμής A/B (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Εμφάνιση εικονιδίου προεπισκόπσης (
 see-x-for-more-information=Δείτε το {0} για περισσότερες πληροφορίες.
 segment=τμήμα (Automatic Translation)
 segment-name-is-required=Απαιτείται όνομα τμήματος αγοράς. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Απενεργοποιήστε αυτήν την επιλογή για να αποτρέψετε την τμηματοποίηση του χρήστη σε κάθε αίτηση. Εάν είναι απενεργοποιημένες, οι συλλογές και οι εμπειρίες εξατομίκευσης δεν θα είναι διαθέσιμες. (Automatic Translation)
 segmentation-enabled-name=Ενεργοποίηση τμηματοποίησης (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Το κουπόνι δεν βρέθηκε.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Το ορισμένο από το χρήστη πεδίο δεν βρέθηκε.
