--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Para editar, vaya al fragmento padre.
 go-to-paypal-and-set-up-ipn-to-post-to-x=Vaya a PayPal y configure IPN para enviar a {0}.
 go-to-profile-pages=Ir a páginas de perfil
 go-to-remote-live=Ir al Live remoto
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Ir a Staging
 go-to-submission-page=Ir a la página de envío
 go-to-test-details=Ir a los detalles de la prueba
@@ -14043,6 +14044,7 @@ see-thumbnail=Ver thumbnail
 see-x-for-more-information=Consulte {0} para obtener más información.
 segment=Segmento
 segment-name-is-required=El nombre del segmento es obligatorio.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segmento: {0}
 segmentation-enabled-description=Deshabilite esta opción para impedir la segmentación de usuarios en todas las peticiones. Si deshabilita esta opción, la personalización de experiencias y colecciones no estará disponible.
 segmentation-enabled-name=Habilitar segmentación
@@ -16236,6 +16238,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=No se ha encontrado el cupón.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=La instancia puede tardar algún tiempo en crearse. El proceso seguirá ejecutándose aunque cierre la ventana.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=El proceso de creación del sitio puede tardar un tiempo en completarse. No se cancelará aunque cierre la ventana.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=El número actual de elementos en esta colección es de {0}.
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=No se ha encontrado el campo personalizado.
