--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Mine PayPal'i juurde ja seadista IPN et postitada {0}'le.
 go-to-profile-pages=Muuda privaatset lehte
 go-to-remote-live=Remote Live'i minemine (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Mine vahekausta (Automatic Translation)
 go-to-submission-page=Mine edastuslehele (Automatic Translation)
 go-to-test-details=Mine A/B testi üksikasjadesse (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Vaata pisipilti
 see-x-for-more-information=Lisainfo saamiseks vaata {0}.
 segment=Segmendi (Automatic Translation)
 segment-name-is-required=Segmendi nimi on nõutav. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Keelake see suvand, et vältida kasutajate segmenteerimist igal taotlusel. Kui see on keelatud, pole kollektsioonide ja kasutuskogemuse isikupärastamine saadaval. (Automatic Translation)
 segmentation-enabled-name=Segmenteerimise lubamine (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupongi ei leitud.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Koomiksit ei leitud.
