--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=به paypal بروید و IPN را تنظیم کنید تا ارسال شود به {0}.
 go-to-profile-pages=برو به صفحات اختصاصی
 go-to-remote-live=برو به ریموت اصلی
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=برو به مرحله‌بندی
 go-to-submission-page=رفتن به صفحه ارسال (Automatic Translation)
 go-to-test-details=رفتن به A / B جزئیات آزمون (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=مشاهده تصوير کوچک
 see-x-for-more-information=برای کسب اطلاعات بیشتر به {0} مراجعه فرمایید.
 segment=بخش (Automatic Translation)
 segment-name-is-required=نام بخش مورد نیاز است. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=غیر فعال کردن این گزینه برای جلوگیری از بخش بندی کاربر در هر درخواست. در صورت غیر فعال شدن، مجموعه ها و تجربه های شخصی سازی در دسترس نخواهد بود. (Automatic Translation)
 segmentation-enabled-name=فعال کردن بخش بندی (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=کوپن یافت نشد.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=کامیک یافت نشد.
