--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Siirry ylätason sivunosaan muokataksesi.
 go-to-paypal-and-set-up-ipn-to-post-to-x=Siirry PayPal:iin ja aseta IPN lähettääksesi {0}:lle.
 go-to-profile-pages=Siirry henkilökohtaisille sivuille
 go-to-remote-live=Mene etäjulkaisu sivuille
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Mene julkaisupuolelle
 go-to-submission-page=Siirry Lähetyssivulle
 go-to-test-details=Siirry Testin Tietoihin
@@ -14040,6 +14041,7 @@ see-thumbnail=Avaa pikkukuva
 see-x-for-more-information=Katso lisätietoja: {0}
 segment=Segmentti
 segment-name-is-required=Segmentin nimi on pakollinen.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segmentti: {0}
 segmentation-enabled-description=Poista tämä valinta käytöstä estääksesi käyttäjien segmentoinnin jokaisella pyynnöllä. Jos se on pois käytöstä, kokoelmien ja kokemusten personointi ei ole käytettävissä.
 segmentation-enabled-name=Ota käyttöön Segmentointi
@@ -16232,6 +16234,7 @@ the-country-could-not-be-found=Maata ei löydy.
 the-coupon-could-not-be-found=Kuponkia ei löydy.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=Instanssin luomisessa voi kestää jonkin aikaa. Ikkunan sulkeminen ei peruuta prosessia.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=Sivuston luomisessa voi kestää jonkin aikaa. Ikkunan sulkeminen ei peruuta prosessia.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=Tämän kokoelman kohteiden tämän hetkinen määrä on {0}.
 the-current-theme-does-not-support-editing-style-book-values=Nykyinen teema ei tue tyylikirjan arvojen muokkaamista. Sinun täytyy valita valittu teema, jotta voit käyttää tätä ominaisuutta.
 the-custom-field-could-not-be-found=Kustomoitua kenttää ei löytynyt.
