--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Allez sur PayPal et configurez un IPN pour l'envoyer à {0}.
 go-to-profile-pages=Aller aux pages de profile
 go-to-remote-live=Aller directement au serveur de production
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Aller à Staging
 go-to-submission-page=Aller à la page d'envoi
 go-to-test-details=Aller aux détails du test A/B
@@ -14041,6 +14042,7 @@ see-thumbnail=Voir la miniature
 see-x-for-more-information=Voir {0} pour de plus amples informations.
 segment=Segment
 segment-name-is-required=Le nom du segment est obligatoire.
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Désactivez cette option pour empêcher la segmentation des utilisateurs à chaque demande. Si elle est désactivée, la personnalisation des collections et des expériences ne sera pas disponible.
 segmentation-enabled-name=Activer la segmentation
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Le bon n'a pas pu être trouvé.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=Le nombre actuel d'éléments dans cette collection est {0}.
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Le champ fait sur commande n'a pas pu être trouvé.
