--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x={0} पर पोस्ट करने के लिए Paypal की वेब साइट पर जाए और IPN स्‍थापित करें
 go-to-profile-pages=निजी पन्ने बदले
 go-to-remote-live=रिमोट लाइव पर जाएं (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=मंचन पर जाएं (Automatic Translation)
 go-to-submission-page=सबमिशन पेज पर जाएं (Automatic Translation)
 go-to-test-details=A/B टेस्ट विवरण पर जाएं (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Thumbnail देखें
 see-x-for-more-information=देखो (0) अधिक जानकारी के लिए.
 segment=हिस्सा (Automatic Translation)
 segment-name-is-required=सेगमेंट नाम की आवश्यकता है। (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=हर अनुरोध पर उपयोगकर्ता विभाजन को रोकने के लिए इस विकल्प को अक्षम करें। यदि अक्षम, संग्रह और अनुभव निजीकरण उपलब्ध नहीं होगा । (Automatic Translation)
 segmentation-enabled-name=सेगमेंटेशन को सक्षम करना (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Coupon पाया नहीं जा सका|
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Custom field पायी नहीं जा सकी|
