--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=לך ל-PayPal והקם IPN כדי לשלוח ל-{0}
 go-to-profile-pages=עבור לדפי הפרופיל
 go-to-remote-live=לך ל-Live מרוחק
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=עבור להיערכות
 go-to-submission-page=עבור לדף שליחה (Automatic Translation)
 go-to-test-details=עבור אל פרטי בדיקת A/B (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=ראה תמונה מוקטנת
 see-x-for-more-information=ראה {0} למידע נוסף
 segment=פלח (Automatic Translation)
 segment-name-is-required=נדרש שם פלח שוק. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=הפוך אפשרות זו ללא זמינה כדי למנוע פילוח משתמש בכל בקשה. אם אפשרות זו אינה זמינה, התאמה אישית של אוספים וחוויות לא תהיה זמינה. (Automatic Translation)
 segmentation-enabled-name=הפוך פילוח לזמין (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=התלוש לא נמצא
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=השדה המותאם אישית לא נמצא.
