--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Go to PayPal and set up IPN to post to {0}. (Automatic Copy)
 go-to-profile-pages=Eiti į profilio puslapius (Automatic Translation)
 go-to-remote-live=Eiti į nuotolinį tiesioginį vyką (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Eiti į Sustojimo (Automatic Translation)
 go-to-submission-page=Eiti į pateikimo puslapį (Automatic Translation)
 go-to-test-details=Eiti į A/B bandymo informaciją (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Žiūrėti miniatiūrą (Automatic Translation)
 see-x-for-more-information=See {0} for more information. (Automatic Copy)
 segment=Segmento (Automatic Translation)
 segment-name-is-required=Būtinas segmento pavadinimas. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Išjunkite šią parinktį, kad išvengtumėte vartotojo segmentavimo kiekvienoje užklausoje. Jei išjungta, rinkiniai ir patirties personalizavimas nebus pasiekiami. (Automatic Translation)
 segmentation-enabled-name=Įgalinti segmentavimą (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupono rasti nepavyko. (Automatic Translation)
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Pasirinktinio lauko rasti nepavyko. (Automatic Translation)
