--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Go to PayPal and set up IPN to post to {0}. (Automatic Copy)
 go-to-profile-pages=Pergi ke Halaman Profil (Automatic Translation)
 go-to-remote-live=Pergi ke Jauh Live (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Pergi ke Pementasan (Automatic Translation)
 go-to-submission-page=Pergi ke Halaman Penyerahan (Automatic Translation)
 go-to-test-details=Pergi ke Butiran Ujian A/B (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Lihat Lakaran Kenit (Automatic Translation)
 see-x-for-more-information=See {0} for more information. (Automatic Copy)
 segment=Segmen (Automatic Translation)
 segment-name-is-required=Nama segmen diperlukan. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Nyahdayakan pilihan ini untuk menghalang segmen pengguna pada setiap permintaan. Jika dinyahdayakan, koleksi dan pengalaman pemperibadian tidak akan tersedia. (Automatic Translation)
 segmentation-enabled-name=Dayakan Segmen (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupon tidak dijumpai. (Automatic Translation)
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Medan tersuai tidak dijumpai. (Automatic Translation)
