--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Idź na stronę PayPal i skonfiguruj IPN aby wysłać na {0}.
 go-to-profile-pages=Przejdź do stron prywatnych
 go-to-remote-live=Przejdź do zdalnego środowiska produkcyjnego
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Przejdź do przemieszczania (Automatic Translation)
 go-to-submission-page=Przejdź do strony przesyłania (Automatic Translation)
 go-to-test-details=Przejdź do szczegółów testu A/B (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Zobacz miniaturkę
 see-x-for-more-information=Zobacz {0} aby uzyskać więcej informacji.
 segment=Segmentu (Automatic Translation)
 segment-name-is-required=Wymagana jest nazwa segmentu. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Wyłącz tę opcję, aby zapobiec segmentacji użytkowników przy każdym żądaniu. Jeśli jest wyłączona, personalizacja kolekcji i środowisk nie będzie dostępna. (Automatic Translation)
 segmentation-enabled-name=Włącz segmentację (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupon nie został znaleziony.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Nie znaleziono pola użytkownika.
