--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Ir para PayPal e configurar o IPN para enviar a {0}.
 go-to-profile-pages=Ir para Páginas do Perfil
 go-to-remote-live=Ir para Ambiente de Produção Remoto (Live)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Ir para Staging
 go-to-submission-page=Vá para a página de submissão (Automatic Translation)
 go-to-test-details=Vá para detalhes de teste A/B (Automatic Translation)
@@ -14043,6 +14044,7 @@ see-thumbnail=Ver Miniatura
 see-x-for-more-information=Ver {0} para mais informação.
 segment=segmento (Automatic Translation)
 segment-name-is-required=O nome do segmento é necessário. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Desabilitar esta opção para evitar a segmentação do usuário em todas as solicitações. Caso seja deficiente, não estarão disponíveis coleções e experiências de personalização. (Automatic Translation)
 segmentation-enabled-name=Habilitar segmentação (Automatic Translation)
@@ -16236,6 +16238,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Não foi possível encontrar o cupão.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=O campo personalizado não pôde ser encontrado.
