--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Go to PayPal and set up IPN to post to {0}. (Automatic Copy)
 go-to-profile-pages=Editează Pagină Privată
 go-to-remote-live=Accesați Live la distanță (Automatic Translation)
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Mergi la Staging (Automatic Translation)
 go-to-submission-page=Accesați Pagina de remitere (Automatic Translation)
 go-to-test-details=Accesați Detalii test A/B (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Vezi Imaginea Micsorata
 see-x-for-more-information=Vezi {0} pentru mai multe informatii.
 segment=segment (Automatic Translation)
 segment-name-is-required=Este necesar numele segmentului. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Dezactivați această opțiune pentru a împiedica segmentarea utilizatorului la fiecare solicitare. Dacă este dezactivată, colecțiile și personalizarea experiențelor nu vor fi disponibile. (Automatic Translation)
 segmentation-enabled-name=Activare segmentare (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Cuponul nu a putut fi gasit.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Campul editabil nu a putut fi gasit.
