--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit. (Automatic Copy)
 go-to-paypal-and-set-up-ipn-to-post-to-x=Choďte na stránky služby PayPal a nastavte IPN pre posielanie na {0}.
 go-to-profile-pages=Prejsť na súkromné stránky
 go-to-remote-live=Choď na vzdialené produkčné prostredie
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=Prejsť na Inscenácia (Automatic Translation)
 go-to-submission-page=Prejsť na stránku odoslania (Automatic Translation)
 go-to-test-details=Prejsť na Podrobnosti testu A/B (Automatic Translation)
@@ -14041,6 +14042,7 @@ see-thumbnail=Ukázať náhľad
 see-x-for-more-information=Pre ďalšie informácie viď. {0}.
 segment=segment (Automatic Translation)
 segment-name-is-required=Vyžaduje sa názov segmentu. (Automatic Translation)
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=Segment: {0} (Automatic Copy)
 segmentation-enabled-description=Ak chcete zabrániť segmentácii používateľov pri každej požiadavke, vypnite túto možnosť. Ak je táto možnosť vypnutá, prispôsobenie kolekcií a skúseností nebude k dispozícii. (Automatic Translation)
 segmentation-enabled-name=Povoliť segmentáciu (Automatic Translation)
@@ -16234,6 +16236,7 @@ the-country-could-not-be-found=The country could not be found. (Automatic Copy)
 the-coupon-could-not-be-found=Kupón sa nenašiel.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process. (Automatic Copy)
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process. (Automatic Copy)
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}. (Automatic Copy)
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme. (Automatic Copy)
 the-custom-field-could-not-be-found=Vlastné pole sa nenašlo.
