--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=转到父级片段进行编辑。
 go-to-paypal-and-set-up-ipn-to-post-to-x=转到 PayPal 并设置IPN，将其发布到{0}。
 go-to-profile-pages=转到资料页面
 go-to-remote-live=转到远程实际
+go-to-segments=Go to Segments (Automatic Copy)
 go-to-staging=转到暂存
 go-to-submission-page=转到提交页面
 go-to-test-details=转到测试细节
@@ -14043,6 +14044,7 @@ see-thumbnail=查看缩略图
 see-x-for-more-information=更多信息参见{0}。
 segment=细分
 segment-name-is-required=细分名称为必填项。
+segment-not-found=Segment Not Found (Automatic Copy)
 segment-x=细分：{0}
 segmentation-enabled-description=禁用此选项以在每个请求上阻止用户细分。
 segmentation-enabled-name=已启用细分
@@ -16236,6 +16238,7 @@ the-country-could-not-be-found=找不到该国家/地区。
 the-coupon-could-not-be-found=找不到优惠券。
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=实例创建可能需要一些时间。关闭窗口不会取消此过程。
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=站点创建可能需要一些时间。关闭窗口不会取消此过程。
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available. (Automatic Copy)
 the-current-number-of-items-in-this-collection-is-x=此集合中的当前条目数为 {0}。
 the-current-theme-does-not-support-editing-style-book-values=当前主题不支持编辑样式簿值。要使用此功能，您必须更改所选主题。
 the-custom-field-could-not-be-found=找不到自定义字段。
